RESOLVED FIXED176587
MiniBrowser closes tab instead of window on close signal
https://bugs.webkit.org/show_bug.cgi?id=176587
Summary MiniBrowser closes tab instead of window on close signal
ManDay
Reported 2017-09-08 01:42:56 PDT
When the window is signalled (by Wayland) to be closed, either by pressing "X" in the Gtk Titlebar or issued by the compositor and multiple tabs are open, only the focused tab is closed.
Attachments
Patch (2.43 KB, patch)
2017-09-08 11:21 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2017-09-08 11:21:10 PDT
WebKit Commit Bot
Comment 2 2017-09-09 08:31:24 PDT
Comment on attachment 320282 [details] Patch Clearing flags on attachment: 320282 Committed r221819: <http://trac.webkit.org/changeset/221819>
WebKit Commit Bot
Comment 3 2017-09-09 08:31:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.